# DJANGO-TEMPLATE

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/hello_world_project/: asgi.py  settings.py  urls.py  wsgi.py
src/pages/: urls.py  views.py
